# govorilka

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.py  pyproject.toml  questions.json
src/english_voice_bot/: __init__.py  config.py  db.py  formatting.py  keyboards.py  logging_config.py  main.py  models.py  prompts.py  repositories.py
src/english_voice_bot/handlers/: callbacks.py  commands.py  dialogue.py  goals.py  guards.py  settings.py
src/english_voice_bot/services/: activity.py  conversation.py  goals.py  openrouter.py  question_bank.py  reminder_scheduler.py  reminders.py  review.py
tests/: __init__.py  conftest.py  test_activity.py  test_config.py  test_formatting.py  test_goals.py  test_openrouter_client.py  test_question_bank.py  test_reminder_scheduler.py  test_reminders.py  test_repositories.py  test_review_flow.py
