[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "english-voice-bot"
version = "0.1.0"
description = "Personal Telegram bot for spoken English practice"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.13,<4",
    "aiosqlite>=0.20,<1",
    "httpx>=0.27,<1",
    "pydantic-settings>=2.4,<3",
    "SQLAlchemy[asyncio]>=2.0,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
    "respx>=0.21,<1",
]

[project.scripts]
english-voice-bot = "english_voice_bot.main:run"

[tool.pytest.ini_options]
addopts = "-p pytest_asyncio.plugin"
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]
